@@ -118,7 +118,8 @@ Cluster    = 0
 Process    = PID
 Flags      = 0x0 (none)
 Bad TOC[0]: invalid entry count 0
-Bad TOC[1]: invalid entry count 0
+
+TOC[1]: offset 56, values offset 72 (0 entries)
 
 == Version 2 interfaces
 MMV file   = $PCP_TMP_DIR/mmv/simple2-PID
@@ -249,7 +250,8 @@ Cluster    = 0
 Process    = PID
 Flags      = 0x0 (none)
 Bad TOC[0]: invalid entry count 0
-Bad TOC[1]: invalid entry count 0
+
+TOC[1]: offset 56, values offset 72 (0 entries)
 
 == Version 3 interfaces
 MMV file   = $PCP_TMP_DIR/mmv/simple3-PID
@@ -408,4 +410,5 @@ Cluster    = 321
 Process    = PID
 Flags      = 0x0 (none)
 Bad TOC[0]: invalid entry count 0
-Bad TOC[1]: invalid entry count 0
+
+TOC[1]: offset 56, values offset 72 (0 entries)
