@@ -9,6 +9,8 @@ pcp-7.0.0 (31 July 2025)
 	pmdaopenmetrics: allow configuration files with epoch times
 	pmdapodman: fix container name/command handling in new podman
 	pmdahacluster: additional pacemaker node metrics
+	pmdammv: support empty instance domains and dynamic map resets
+	pmdammv: export instance domain help text when requested
     - Server-side utilities and log management scripts:
 	pmlogger, pmproxy: support for a remote archive push webhook;
 	  providing central logging without server-side configuration
